--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 <ul>
-  <% @articles.each do |article| %>
+<% @articles.each do |article| %>
     <li>
        <%= link_to article.title, article_path(article) %><br />
     </li>
   <% end %>
 </ul>
 
-<%= link_to 'Write Article, new_article_path' %>
+<%= link_to 'Write Article', new_article_path %>
