installing device authentication solution, amending development environment, updating view so only logged in users can create an article

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <% if flash[:notice] %>
   <%= flash[:notice] %>
   <% end %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
