--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,4 +6,9 @@
   <% end %>
 </ul>
 
+<%= link_to 'Sign in/Sign Up', new_user_session_path %>
+
+<% if user_signed_in? %>
 <%= link_to 'Write Article', new_article_path %>
+<%= link_to 'Log out', destroy_user_session_path, :method => :delete %>
+<% end %>
